--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </div>
             <div class="col-md-3">
               <div class="pastfigh">
-                <div class="pastdisp" style="background: url(./assets/img/custom/nelson.jpg);"></div>
+                <div class="pastdisp" style="background: url(./assets/img/custom/martin.jpg);"></div>
                 <h4 class="mb-1 mt-3">Martin Luther King</h4>
                 <a href="#" target="_blank" class="text-blue">View Story</a>
               </div>
@@ -128,7 +128,7 @@
 
             <div class="col-md-3">
               <div class="pastfigh">
-                <div class="pastdisp" style="background: url(./assets/img/custom/nelson.jpg);"></div>
+                <div class="pastdisp" style="background: url(./assets/img/custom/teresa.jpg);"></div>
                 <h4 class="mb-1 mt-3">Mother Teresa</h4>
                 <a href="#" target="_blank" class="text-blue">View Story</a>
               </div>
@@ -136,7 +136,7 @@
 
             <div class="col-md-3">
               <div class="pastfigh">
-                <div class="pastdisp" style="background: url(./assets/img/custom/nelson.jpg);"></div>
+                <div class="pastdisp" style="background: url(./assets/img/custom/funmi.jpeg);"></div>
                 <h4 class="mb-1 mt-3">Funmilayo Ransome-kuti</h4>
                 <a href="#" target="_blank" class="text-blue">View Story</a>
               </div>
