--- a/index.html
+++ b/index.html
@@ -143,6 +143,15 @@
             </div>
           </div>
         </div>
+
+        <div class="mt-5">
+          <h1 class="font-weight-bold">Social Media Feeds</h1>
+          <script src="https://assets.juicer.io/embed.js" type="text/javascript"></script>
+          <link href="https://assets.juicer.io/embed.css" media="all" rel="stylesheet" type="text/css" />
+          <ul class="juicer-feed" data-feed-id="freedom-of-speech">
+            <h1 class="referral"><a href="https://www.juicer.io">Powered by Juicer.io</a></h1>
+          </ul>
+        </div>
       </div>
     </div>
     <footer class="footer footer-default">
